--- a/relatorio_olx_pf.ipynb
+++ b/relatorio_olx_pf.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPn/ldHCyePLdkHkM8T7wSz",
+      "authorship_tag": "ABX9TyOkfU/Grecfux8/63797GFR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,7 @@
         "\n",
         "olx = pd.read_excel('Movida_Vendedores.xlsx')\n",
         "email_loja = pd.read_excel('email_loja.xlsx')\n",
+        "propostas = pd.read_csv('propostas.csv', sep=\";\", low_memory=False)\n",
         "\n",
         "olx_pf = olx.copy()\n",
         "\n",
@@ -94,21 +95,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fNHkp8Wo-Xml",
-        "outputId": "99e54ca8-b302-406b-fdca-2ca900236563"
+        "outputId": "3e75e4d5-10f7-4b1b-c2f0-e67ed940f6f6"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-2514649453.py:50: SettingWithCopyWarning: \n",
+            "/tmp/ipython-input-3901956456.py:51: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  olx_ajustado['Dias sem acesso'] = olx_ajustado['Dias sem acesso'].fillna(0)\n",
-            "/tmp/ipython-input-2514649453.py:53: SettingWithCopyWarning: \n",
+            "/tmp/ipython-input-3901956456.py:54: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -131,7 +132,7 @@
         "id": "4zQPKBF_8XEl",
         "outputId": "ca48d5bf-1623-4f12-b9c7-0fd3a9014cef"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +538,7 @@
         "id": "U5mwLnyRCJS_",
         "outputId": "6ccc2e90-6803-4bc2-bb3f-793ffc2d6581"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,22 +581,109 @@
         "# Copiando para novo df para filtrar só proposta com tags de OLX\n",
         "mobiauto_olx = propostas.copy()\n",
         "\n",
+        "# --- Preparando coluna para extrair informações ---\n",
+        "\n",
+        "# Transforar coluna 'Canal' , 'Origem' em string\n",
+        "mobiauto_olx['Origem'] = mobiauto_olx['Origem'].astype(str)\n",
+        "mobiauto_olx['Canal'] = mobiauto_olx['Canal'].astype(str)\n",
+        "mobiauto_olx['Nome PDV'] = mobiauto_olx['Nome PDV'].astype(str)\n",
+        "\n",
+        "# --- Filtrando linhas de interesse para relatorio olx pf ---\n",
+        "\n",
+        "# Filtrando coluna 'Origem' onde a linha contenha \"OLX Pessoa Física\"\n",
+        "mobiauto_olx = mobiauto_olx[mobiauto_olx['Canal'].str.contains('OLX Pessoa Física', na=False)]\n",
+        "\n",
+        "# Filtrando coluna 'Canal' onde a linha contenha \"Loja\"\n",
+        "mobiauto_olx = mobiauto_olx[mobiauto_olx['Canal'].str.contains('Loja', na=False)]\n",
+        "\n",
+        "# ---\n",
+        "\n",
+        "# Fazer a junção propostas e email_loja\n",
+        "propostas_ajustadas = propostas.merge(propostas,left_on='Nome PDV', right_on='Nome da Conta', how='left')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Filtrando apenas as lojas determinadas\n",
+        "mobiauto_olx = mobiauto_olx[mobiauto_olx['Nome PDV'].str.contains(\n",
+        "'Seminovos Movida Niterói', 'Seminovos Movida Rio de Janeiro Tijuca',\n",
+        " 'Seminovos Movida Juiz de Fora',\n",
+        " 'Seminovos Movida Curitiba Mario Tourinho',\n",
+        " 'Seminovos Movida Curitiba Floriano', 'Seminovos Movida Itajaí',\n",
+        " 'Seminovos Movida Caxias do Sul',\n",
+        " 'Seminovos Movida Rio de Janeiro Duque de Caxias',\n",
+        " 'Seminovos Movida São José dos Pinhais', 'Seminovos Movida Maringá',\n",
+        " 'Seminovos Movida Porto Alegre Sarandi', 'Seminovos Movida Londrina',\n",
+        " 'Seminovos Movida Rio de Janeiro Vila Valqueire',\n",
+        " 'Seminovos Movida Nova Iguaçu',\n",
+        " 'Seminovos Movida Rio de Janeiro Av. das Américas',\n",
+        " 'Seminovos Movida Canoas' 'Seminovos Movida Rio de Janeiro Campo Grande',\n",
+        " 'Seminovos Movida São José' ,'Seminovos Movida Porto Alegre Ipiranga',\n",
+        " 'Seminovos Movida Rio de Janeiro Barra da Tijuca',\n",
+        " 'Seminovos Movida Joinville'\n",
+        "  )]\n",
+        "\n",
+        "\n",
         "# --- Transformando colunas de datas ---\n",
         "\n",
         "# Transformando coluna 'Data' e 'Data ultima interação' em Datetime\n",
         "mobiauto_olx['Data ultima interação'] = pd.to_datetime(mobiauto_olx['Data ultima interação'], format='%d/%m/%Y')\n",
         "\n",
-        "# Filtrando coluna 'Data ultima interação ' a partir de '29/07/2025'\n",
-        "mobiauto_olx = mobiauto_olx[mobiauto_olx['Data ultima interação'] >= '29/07/2025']\n",
+        "# Filtrando coluna 'Data ultima interação ' a partir do inicio do mês atual\n",
+        "mobiauto_olx = mobiauto_olx[mobiauto_olx['Data ultima interação'] >= '01/09/2025']\n",
         "\n",
         "# Tranformando coluna 'Data ultima interação' em object novamente\n",
-        "mobiauto_olx['Data ultima interação'] = mobiauto_olx['Data ultima interação'].astype('string')\n"
+        "mobiauto_olx['Data ultima interação'] = mobiauto_olx['Data ultima interação'].astype('string')\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "t-zB6GhMR4-N"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "print(olx_ajustado['Nome da Conta'].unique())"
+      ],
+      "metadata": {
+        "id": "DvUAZDz86aG0",
+        "outputId": "5804834b-b8de-4f83-c766-d536dfbb65b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Seminovos Movida Niterói' 'Seminovos Movida Rio de Janeiro Tijuca'\n",
+            " 'Seminovos Movida Juiz de Fora'\n",
+            " 'Seminovos Movida Curitiba Mario Tourinho'\n",
+            " 'Seminovos Movida Curitiba Floriano' 'Seminovos Movida Itajaí'\n",
+            " 'Seminovos Movida Caxias do Sul'\n",
+            " 'Seminovos Movida Rio de Janeiro Duque de Caxias'\n",
+            " 'Seminovos Movida São José dos Pinhais' 'Seminovos Movida Maringá'\n",
+            " 'Seminovos Movida Porto Alegre Sarandi' 'Seminovos Movida Londrina'\n",
+            " 'Seminovos Movida Rio de Janeiro Vila Valqueire'\n",
+            " 'Seminovos Movida Nova Iguaçu'\n",
+            " 'Seminovos Movida Rio de Janeiro Av. das Américas'\n",
+            " 'Seminovos Movida Canoas' 'Seminovos Movida Rio de Janeiro Campo Grande'\n",
+            " 'Seminovos Movida São José' 'Seminovos Movida Porto Alegre Ipiranga'\n",
+            " 'Seminovos Movida Rio de Janeiro Barra da Tijuca'\n",
+            " 'Seminovos Movida Joinville' nan]\n"
+          ]
+        }
+      ]
     }
   ]
 }
